--- a/_posts/2020-11-5-First.md
+++ b/_posts/2020-11-5-First.md
@@ -1,9 +1,9 @@
 ---
 layout: post
-title: Moving to GitHub pages + Jekyll in November
+title: Moving to GitHub pages + Jekyll
 ---
 
-in November, I have decided to try technical blogging here.
+I have decided to try technical blogging here.
 
 I hate having to learn a bunch of new stuff, just to do the simplest of things. But, that is the way of the world.
 
